# sqlx_postgres

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20230424163709_users.sql
src/: main.rs
